pxc/tests/test_01_px/constmet3.px
import common "";

namespace constmet3;

struct foo {
	int x;
	function int m(int y) const {
		int oldx = x;
		x = y; // error
		return oldx;
	}
}

ptr{foo} v = foo(10);
println(v->m(20));

